--- a/README.org
+++ b/README.org
@@ -11,6 +11,13 @@ Outside of the vagrant environment, configure will check what is
 installed, etc. and fill in the appropriate values in the various .in
 files (or flag an error if something is missing).
 
+* Script
+
+Uses:
+- Python
+- [[http://rdflib.readthedocs.org/en/stable/index.html][Rdflib]] for RDF operations
+- [[https://secure.simplistix.co.uk/svn/xlrd/trunk/xlrd/doc/xlrd.html?p=4966][xlrd]] for parsing the excel input files.
+
 * Usage
 
 The first time:
